# avatar

./: .gitmodules  Avatar.cpp  AvatarHelpers.cpp  AvatarModel.cpp  AvatarOptimizer.cpp  AvatarPCL.cpp  AvatarPoseSequence.cpp  AvatarRenderer.cpp  AzureKinectCamera.cpp  BGSubtractor.cpp  CMakeLists.txt  Calibration.cpp  DataRecording.cpp  DepthCamera.cpp  Freenect2Camera.cpp  GaussianMixture.cpp  LICENSE.md  README.md  RTree.cpp  SparseImage.cpp  Util.cpp  Version.h.in  ViconSkeleton.cpp  bgsubtract.cpp  cnpy.cpp  data-recording.cpp  demo.cpp  face_landmark_tracking.py  intrin.txt  live-demo.cpp  optim.cpp  partlabels.cpp  rtree-run-dataset.cpp  rtree-train.cpp  rtree-transfer.cpp  sample.cpp  scratch.cpp  smpl-viewer.cpp  smplsynth.cpp  smpltrim.cpp
include/: Avatar.h  AvatarOptimizer.h  AvatarPCL.h  AvatarRenderer.h  AzureKinectCamera.h  BGSubtractor.h  Calibration.h  Config.h  DepthCamera.h  Freenect2Camera.h  GaussianMixture.h  RTree.h  SparseImage.h  Util.h  UtilCnpy.h  Version.h  ViconSkeleton.h
include/internal/: AvatarHelpers.h
